tests/fixtures/invalid/none_in_bool.py
# Cannot use 'in' with None and Bool
x: bool = None in True
